# dagger

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yaml  age-key.txt  datastore-info.txt  log.txt  main.go  package-lock.json  package.json
.container-use/: .gitkeep  README.md  decisions.md  module-development.md  release-guide.md
ansible/: README.md  collection.go  container.go  dagger.json  execute.go  go.mod  go.sum  main.go  pipeline.go  release.go  roles.go
argocd/: README.md  application.go  applicationset.go  cli.go  cluster.go  container.go  dagger.json  go.mod  go.sum  main.go  project.go  verify_catalog.go
clusterbook/: README.md  clusters.go  dagger.json  go.mod  go.sum  ips.go  main.go  networks.go
crane/: README.md  auth.go  copy.go  dagger.json  go.mod  main.go
crossplane/: README.md  container.go  dagger.json  go.mod  go.sum  main.go  package.go  push.go  push_preview.go  utils.go  verify.go  xrd.go
dependencies/: README.md  ansible.go  dagger.json  go.mod  main.go  renovate.go
docker/: README.md  build.go  dagger.json  go.mod  go.sum  lint.go  main.go  mirror.go  push.go  scan.go
flux/: README.md  container.go  dagger.json  flux-instance.yaml  go.mod  go.sum  main.go  push.go
git/: README.md  container.go  dagger.json  examples.md  github.go  github_branch.go  github_clone.go  github_commit.go  github_issue.go  github_pull_request.go  go.mod  main.go  workflow.go
tests/python/: Dockerfile  pyproject.toml
tests/python/src/: hello.py
tests/python/tests/: test_hello.py
(+297 files in other folders)
